# uc-intg-musicassistant

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-entry.sh  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
dev/: Dockerfile  docker-compose.yml
docs/: code_guidelines.md
intg-musicassistant/: browser.py  const.py  device.py  discover.py  driver.py  media_player.py  select_entity.py  sensor.py  setup.py
intg-template/: media_player.py
