[project]
# TODO: Update project name to match your integration
name = "uc-intg-musicassistant"
version = "0.1.0"
description = "Unfolded Circle Integration Music Assistant"
readme = "README.md"
requires-python = ">=3.11"
license = "MPL-2.0"

# TODO: Update author information
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

# TODO: Update repository URL
urls.Homepage = "https://github.com/yourusername/uc-intg-musicassistant"
urls.Repository = "https://github.com/yourusername/uc-intg-musicassistant"

dependencies = [
    # Core dependencies
    "ucapi==0.5.2",
    "ucapi-framework==1.9.1",
    "pyee>=9.0",
    
    # Discovery protocols
    
    # TODO: Add your device-specific library here
    # "your-device-library==1.0.0",
]
