[project]
name = "uc-intg-musicassistant"
version = "0.2.5"
description = "Unfolded Circle Integration Music Assistant"
readme = "README.md"
requires-python = ">=3.11"
license = "MPL-2.0"

authors = [
    { name = "Jack Powell", email = "jackattack51@gmail.com" }
]

# TODO: Update repository URL
urls.Homepage = "https://github.com/jackjpowell/uc-intg-musicassistant"
urls.Repository = "https://github.com/jackjpowell/uc-intg-musicassistant"

dependencies = [
    # Core dependencies
    "ucapi==0.6.0",
    "ucapi-framework==1.9.1",
    "pyee>=9.0",
    "music-assistant-client>=1.3.4",
    "music-assistant-models>=1.1.89"
]
